# sports_line_scraper

./: .gitignore  README.md  pyproject.toml
sports_line_scrape/src/sports_line_scrape/: __init__.py
src/sports_line_scrape/: __init__.py
tests/: unit_tests.py
tests/source/: moneyline_resp.html  over_under_resp.html  spread_resp.html
